--- a/style.css
+++ b/style.css
@@ -37,13 +37,12 @@ h2 {
   justify-content: center;
   gap: 1rem;
   box-shadow: inset 0px 1px 6px #8d8c8c96;
-  
 }
 
 .explorer {
   display: flex;
   flex-direction: column;
-  justify-content:center;
+  justify-content: center;
   align-content: center;
   align-items: center;
   padding-top: 2rem;
@@ -56,7 +55,7 @@ h2 {
   font-weight: bold;
 }
 
-.button { 
+.button {
   font-weight: 500;
   font-size: medium;
   border-radius: 40px;
@@ -65,15 +64,14 @@ h2 {
   height: 3.5rem;
   margin-top: 3rem;
   color: #ffffff;
-  background-image:linear-gradient(60deg,#FF79DA, #9356DC);
+  background-image: linear-gradient(60deg, #ff79da, #9356dc);
   box-shadow: 1px 1px 10px 1px#928888;
-
 }
 .bigBtn {
   width: 17rem;
   position: relative;
   display: flex;
-  flex-direction: row; 
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   font-size: small;
@@ -114,7 +112,6 @@ h2 {
   border-radius: 100px;
 }
 .bigBtn .fas {
-
   color: #6d6c6c;
 }
 .restaurants {
@@ -148,68 +145,54 @@ h2 {
   display: flex;
   flex-direction: column;
 }
-.card__image
- {
-    width: 100%;
- }
+.card__image {
+  width: 100%;
+}
 
 .card__image > img {
   width: inherit;
   border-radius: 20px 20px 0px 0px;
 }
-.nouveau { 
+.nouveau {
   position: absolute;
   display: flex;
   justify-content: space-around;
-  width: 100px; 
+  width: 100px;
   height: 30px;
   top: 1.3rem;
   right: 15px;
   font-weight: 500;
   border-radius: 4px;
   color: #478a79;
-  background: #99E2D0;
+  background: #99e2d0;
   box-shadow: 4px 4px 8px 2px rgba(0, 0, 0, 0.1);
-
 }
 .card__description {
   width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
- text-align: 1rem;
+  flex-direction: row;
+  justify-content: space-between;
   height: 25%;
   border-radius: 0 0 20px 20px;
-  margin-top: -0.5rem;
   color: #000000;
   background-color: white;
-  line-height: 0px;
+  line-height: 10px;
 }
 .card__description .coeur {
+ align-self: center;
+ padding-right: 15px;
+}
 
-  margin-left: 15rem;
-}
--coeur {
-display: flex;
-flex-direction: wrap;
-justify-self: center;
-align-items: center;
-align-self: center;
-}
-.coeur {
-margin-top:-20px;
-padding-bottom: 20px;
-}
 .coeur .fas {
-    display: none;
+  display: none;
 }
 
 .coeur:hover .fas {
-    display: block;
-    color: #ff79da;
+  display: block;
+  background: radial-gradient(#ff79da, #9356dc);
 }
 .coeur:hover .far {
-    display: none;
+  display: none;
 }
 
 h3,
@@ -217,9 +200,8 @@ p {
   margin-left: 15px;
 }
 .img2 {
- width: auto;
- height: 280px;
- 
+  width: auto;
+  height: 200px;
 }
 
 h4 {
@@ -244,19 +226,16 @@ p {
   display: block;
   justify-content: space-between;
 }
-.gap1 {display: inline;
-  
+
+.gap > i {
+  padding-right: 14px;
+}
+.gap1 {
+  display: inline;
 }
 .contact {
   text-decoration: none;
   color: white;
-}
-.icone {
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
 }
 
 /*Page la palette du gout*/
@@ -278,19 +257,19 @@ p {
   align-items: center;
   align-content: center;
   background-color: rgb(238, 237, 237);
- margin-top: -4rem;
- border-radius: 50px 50px 0 0;
+  margin-top: -4rem;
+  border-radius: 50px 50px 0 0;
 }
 .coeur2 .fas {
- display: none;
+  display: none;
 }
 
 .coeur2:hover .fas {
-  display: block; 
+  display: block;
   color: #ff79da;
 }
 .coeur2:hover .far {
- display: none;
+  display: none;
 }
 
 h4 {
@@ -300,7 +279,7 @@ h4 {
 }
 .bigBtn2 {
   display: flex;
-  flex-direction: row; 
+  -flex-direction: column;
   font-size: small;
   font-weight: normal;
   margin-bottom: 2rem;
@@ -314,6 +293,10 @@ h4 {
   background-color: white;
   width: 80%;
   height: 4rem;
+}
+.check {
+  position: relative;
+  background-color: #050505;
 }
 .menu {
   background-color: rgb(238, 237, 237);
@@ -331,7 +314,7 @@ h4 {
 .menu__category1 .menu__category2 .menu__category3 {
   -flex: none;
   display: flex;
- justify-self: unset;
+  justify-self: unset;
   -text-align: unset;
   padding-left: 1rem;
   margin-left: 1rem;
@@ -343,22 +326,31 @@ h4 {
   align-content: center;
   font-weight: bold;
 }
-.menu-item__prix:hover {
- background-color: #99E2D0;
- -moz-transform: scale(0.7) translateX(-100px) translateY(0px);
- -webkit-transform: scale(0.7) translateX(-100px) translateY(0px);
- -o-transform: scale(0.7) translateX(-100px) translateY(0px);
- -ms-transform: scale(0.7) translateX(-100px) translateY(0px);
- transform: scale(0.7) translateX(-100px) translateY(0px);
+.animation {
+  height: 80px;
+  width: 80px;
+  background: #99e2d0;
+  border-radius:  0 25px 25px 0;
+
+}
+menu-item__prix:hover {
+  height: 100px;
+  width: 100px;
+  background-color: #99e2d0;
+  -moz-transform: scale(0.7) translateX(-100px) translateY(0px);
+  -webkit-transform: scale(0.7) translateX(-100px) translateY(0px);
+  -o-transform: scale(0.7) translateX(-100px) translateY(0px);
+  -ms-transform: scale(0.7) translateX(-100px) translateY(0px);
+  transform: scale(0.7) translateX(-100px) translateY(0px);
 }
 .ligne {
   margin-left: 3%;
   width: 2rem;
   height: 5px;
-  border-width:0;
-  background-color: #99E2D0;
-  color: #99E2D0;
- }
+  border-width: 0;
+  background-color: #99e2d0;
+  color: #99e2d0;
+}
 .button2 {
   margin-left: 20%;
   margin-bottom: 8%;
@@ -371,10 +363,9 @@ h4 {
   height: 3.5rem;
   margin-top: 3rem;
   color: #ffffff;
-  background-image:linear-gradient(60deg,#FF79DA, #9356DC);
+  background-image: linear-gradient(60deg, #ff79da, #9356dc);
   box-shadow: 1px 1px 10px 1px#928888;
 }
 .resto-main {
-  background-color:  rgb(238, 237, 237);
+  background-color: rgb(238, 237, 237);
 }
-
